--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ node_modules
 package-lock.json
 client/node_modules
 client/pack-lock.json
+.DS_Store
+client/.DS_Store
+desktop.ini
+client/desktop.ini
